[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-grpc-bootstrap-toolkit"
version = "0.3.0"
description = "Opinionated Solana gRPC bootstrap and tuning toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "morier" }
]
keywords = ["solana", "grpc", "infrastructure", "tooling", "benchmark"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: System :: Networking",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Console"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/morier/solana-grpc-bootstrap-toolkit"
Repository = "https://github.com/morier/solana-grpc-bootstrap-toolkit"
Issues = "https://github.com/morier/solana-grpc-bootstrap-toolkit/issues"
Changelog = "https://github.com/morier/solana-grpc-bootstrap-toolkit/blob/master/CHANGELOG.md"

[project.scripts]
solana-grpc-toolkit = "solana_grpc_bootstrap_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
